--- a/@/SergioGlorias/index.html
+++ b/@/SergioGlorias/index.html
@@ -17,8 +17,8 @@
 
   <body>
     <div class="back overflow-auto">
-      <div class="row mt-5">
-        <div class="row">
+      <div class="row mt-5 mx-0">
+        <div class="row mx-0">
           <center>
             <img
               src="img/profile.jpg"
@@ -29,7 +29,7 @@
             />
           </center>
         </div>
-        <div class="row mb-4">
+        <div class="row mb-4 mx-0">
           <div class="col-12 text-center text-white">
             <h1 class="fw-bold display-5">Sérgio Glórias</h1>
             <h4 class="fw-bold">
@@ -37,7 +37,7 @@
             </h4>
           </div>
         </div>
-        <div class="row my-2">
+        <div class="row my-2 mx-0">
           <div class="col"></div>
           <div class="col-12 col-md-9 col-lg-6">
             <a
@@ -62,7 +62,7 @@
           </div>
           <div class="col"></div>
         </div>
-        <div class="row my-2">
+        <div class="row my-2 mx-0">
           <div class="col"></div>
           <div class="col-12 col-md-9 col-lg-6">
             <a
@@ -87,7 +87,7 @@
           </div>
           <div class="col"></div>
         </div>
-        <div class="row my-2">
+        <div class="row my-2 mx-0">
           <div class="col"></div>
           <div class="col-12 col-md-9 col-lg-6">
             <a
@@ -113,7 +113,7 @@
           </div>
           <div class="col"></div>
         </div>
-        <div class="row my-2">
+        <div class="row my-2 mx-0">
           <div class="col"></div>
           <div class="col-12 col-md-9 col-lg-6">
             <a
@@ -138,7 +138,7 @@
           </div>
           <div class="col"></div>
         </div>
-        <div class="row my-2">
+        <div class="row my-2 mx-0">
           <div class="col"></div>
           <div class="col-12 col-md-9 col-lg-6">
             <a
