--- a/@/SergioGlorias/index.html
+++ b/@/SergioGlorias/index.html
@@ -21,7 +21,7 @@
         <div class="row mx-0">
           <center>
             <img
-              src="img/profile.jpg"
+              src="img/profile.webp"
               alt="Serginho"
               class="rounded-circle img-fluid"
               width="300"
