--- a/@/SergioGlorias/index.html
+++ b/@/SergioGlorias/index.html
@@ -117,7 +117,7 @@
           <div class="col"></div>
           <div class="col-12 col-md-9 col-lg-6">
             <a
-              href="https://ratings.fide.com/profile/1983539"
+              href="https://lichess.org/fide/1983539/Glorias_Sergio"
               target="_blank"
               rel="noopener nofollow"
               class="btn btn-outline-info btn-lg fw-bold fs-4 py-3 align-items-center justify-content-center d-flex"
