--- a/@/SergioGlorias/index.html
+++ b/@/SergioGlorias/index.html
@@ -66,6 +66,21 @@
           <div class="col"></div>
           <div class="col-12 col-md-9 col-lg-6">
             <a
+              href="https://twitter.com/SergioGlorias"
+              target="_blank"
+              rel="noopener nofollow"
+              class="btn btn-outline-info btn-lg fw-bold fs-4 py-3 align-items-center justify-content-center d-flex"
+            >
+              <svg xmlns="http://www.w3.org/2000/svg" height="30" viewBox="0 0 512 512"><!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path fill="#fff" d="M389.2 48h70.6L305.6 224.2 487 464H345L233.7 318.6 106.5 464H35.8L200.7 275.5 26.8 48H172.4L272.9 180.9 389.2 48zM364.4 421.8h39.1L151.1 88h-42L364.4 421.8z"/></svg>
+              <span class="mx-2">Twitter/X</span>
+            </a>
+          </div>
+          <div class="col"></div>
+        </div>
+        <div class="row my-2 mx-0">
+          <div class="col"></div>
+          <div class="col-12 col-md-9 col-lg-6">
+            <a
               href="https://www.twitch.tv/heyserginho"
               target="_blank"
               rel="noopener nofollow"
