--- a/@/SergioGlorias/index.html
+++ b/@/SergioGlorias/index.html
@@ -17,7 +17,7 @@
 
   <body>
     <div class="back overflow-auto">
-      <div class="row mt-5 mx-0">
+      <div class="row my-5 mx-0">
         <div class="row mx-0">
           <center>
             <img
